--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
 
   "dependencies": {
+    "hubot-scripts": ">= 1.1.0",
     "coffee-script": "1.1.1",
     "optparse": "1.0.1",
     "scoped-http-client": "0.9.4",
